First steps towards Jekyll-based website
Issue: #205

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>JUnit 5</h1>
+---
+layout: default
+title: Home
+---
+
+<div class="jumbotron">
+  <h1>The new major version of the programmer-friendly testing framework for Java&nbsp;8</h1>
+  <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/docs/current/user-guide" role="button">User Guide</a></p>
+</div>
