--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 ---
 layout: default
-title: Home
+title: JUnit 5
 ---
 
 <div class="jumbotron">
   <h1>The new major version of the programmer-friendly testing framework for Java&nbsp;8</h1>
   <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/docs/current/user-guide" role="button">User Guide</a></p>
 </div>
+
+<h2>Upcoming Events</h2>
+<div id="events"></div>
+<script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/events.js"></script>
