--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ title: JUnit 5
       <i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;
       Code &amp; Issues
     </a></li>
+    <li><a class="btn btn-primary btn-lg" href="http://stackoverflow.com/questions/tagged/junit5" role="button">
+      <i class="fa fa-stack-overflow fa-lg" aria-hidden="true"></i>&nbsp;
+      Forum
+    </a></li>
   </ul>
 </div>
 
