Make events linkable

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@ title: JUnit 5
     {% capture junit5-intro %}{% include junit5-intro.md %}{% endcapture %}
     {{ junit5-intro | markdownify }}
   </div>
-  <div class="col-md-4 col-sm-6">
+  <div id="events" class="col-md-4 col-sm-6">
     <h2>Upcoming Events</h2>
-    <div id="events"></div>
     <script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/events.js"></script>
   </div>
 </div>
