Add "Support JUnit" button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ title: JUnit 5
       <i class="fab fa-stack-overflow fa-lg"></i>&nbsp;
       Q&thinsp;&amp;&thinsp;A
     </a></li>
+    <li><a class="btn btn-danger btn-lg" href="https://steadyhq.com/en/junit" role="button">
+      <i class="far fa-handshake"></i>&nbsp;
+      Support JUnit
+    </a></li>
   </ul>
 </div>
 
