Include junit5-sponsoring markdown file

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ title: JUnit 5
   <div class="col-md-8 col-sm-6">
     {% capture junit5-intro %}{% include junit5-intro.md %}{% endcapture %}
     {{ junit5-intro | markdownify }}
+    {% capture junit5-sponsoring %}{% include junit5-sponsoring.md %}{% endcapture %}
+    {{ junit5-sponsoring | markdownify }}    
   </div>
   <div class="col-md-4 col-sm-6">
     <h2>Upcoming Events</h2>
