--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@ title: JUnit 5
     {{ junit5-sponsoring | markdownify }}    
   </div>
   <div class="col-md-4 col-sm-6">
+    <h2>Current Versions</h2>
+      <div>
+        <img alt="undefined" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?label=JUnit%20Jupiter&style=flat">
+      </div>
+      <div>
+        <img alt="undefined" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?label=JUnit%20Vintage&style=flat">
+      </div>
+        <img alt="undefined" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?label=JUnit%20Platform&style=flat">
+      </div>
     <h2>Upcoming Events</h2>
     <div id="events">
       <script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/events.js"></script>
