Add links from shields to search.maven.org

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@ title: JUnit 5
   <div class="col-md-4 col-sm-6">
     <h2>Current Versions</h2>
       <div>
-        <img alt="undefined" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?label=JUnit%20Jupiter&style=flat">
-        <img alt="undefined" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?label=JUnit%20Platform&style=flat">
+        <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
+          <img alt="Jupiter Shield" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=Jupiter&style=flat">
+        </a>
+        <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
+          <img alt="Platform Shield" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
+        </a>
       </div>
     <h2>Upcoming Events</h2>
     <div id="events">
