--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: JUnit 5
         <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
           <img alt="Jupiter Shield" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=Jupiter&style=flat">
         </a>
-        <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
+        <a href="https://search.maven.org/search?q=g:org.junit.platform">
           <img alt="Platform Shield" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
         </a>
       </div>
