--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@ title: JUnit 5
         <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
           <img alt="Jupiter Shield" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20Jupiter&style=flat">
         </a>
+        <a href="https://search.maven.org/search?q=g:org.junit.vintage">
+          <img alt="Vintage Shield" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?colorB=25a162&label=JUnit%20Vintage&style=flat">
+        </a>
         <a href="https://search.maven.org/search?q=g:org.junit.platform">
           <img alt="Platform Shield" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
         </a>
