--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ title: JUnit 5
     <h2>Current Versions</h2>
       <div>
         <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
-          <img alt="Jupiter Shield" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20Jupiter&style=flat">
-        </a>
+          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20Jupiter&style=flat">
+        </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.vintage">
-          <img alt="Vintage Shield" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?colorB=25a162&label=JUnit%20Vintage&style=flat">
-        </a>
+          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?colorB=25a162&label=JUnit%20Vintage&style=flat">
+        </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.platform">
-          <img alt="Platform Shield" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
+          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
         </a>
       </div>
     <h2>Upcoming Events</h2>
