Fix links in version shields
This commit restores the correct links in the version shields.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ title: JUnit 5
           <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20%20%20Jupiter%7F%7F&style=flat">
         </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.vintage">
-          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20%20Vintage%7F&style=flat">
+          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?colorB=25a162&label=JUnit%20%20Vintage%7F&style=flat">
         </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.platform">
-          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
+          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
         </a>
       </div>
     <h2>Upcoming Events</h2>
