Use Maven Central shield with version prefix filter
Issue #1737

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ title: JUnit 5
   <div class="col-md-4 col-sm-6">
     <h2>Current Versions</h2>
       <div>
-        <a href="https://search.maven.org/search?q=g:org.junit.jupiter">
-          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter.svg?colorB=25a162&label=JUnit%20%20%20Jupiter%7F%7F&style=flat">
+        <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.4">
+          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.4.svg?color=25a162">
         </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.vintage">
-          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?colorB=25a162&label=JUnit%20%20Vintage%7F&style=flat">
+        <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.4">
+          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?/5.4colorB=25a162">
         </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.platform">
-          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?colorB=25a162&label=JUnit%20Platform&style=flat">
+        <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.4">
+          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?/1.4colorB=25a162">
         </a>
       </div>
     <h2>Upcoming Events</h2>
