Fix syntax and restore labels

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ title: JUnit 5
     <h2>Current Versions</h2>
       <div>
         <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.4">
-          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.4.svg?color=25a162">
+          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.4.svg?color=25a162&label=JUnit%20Jupiter">
         </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.4">
-          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine.svg?/5.4colorB=25a162">
+          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine/5.4.svg?colorB=25a162&label=JUnit%20Vintage">
         </a><br />
         <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.4">
-          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons.svg?/1.4colorB=25a162">
+          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons/1.4.svg?colorB=25a162&label=JUnit%20Platform">
         </a>
       </div>
     <h2>Upcoming Events</h2>
