--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ title: JUnit 5
   <div class="col-md-4 col-sm-6">
     <h2>Current Versions</h2>
       <div>
-        <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.4">
+        <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.4.%3F">
           <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.4.svg?color=25a162&label=JUnit%20Jupiter">
         </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.4">
+        <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.4.%3F">
           <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine/5.4.svg?colorB=25a162&label=JUnit%20Vintage">
         </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.4">
+        <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.4.%3F">
           <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons/1.4.svg?colorB=25a162&label=JUnit%20Platform">
         </a>
       </div>
