--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: JUnit 5
       Q&thinsp;&amp;&thinsp;A
     </a></li>
     <li><a class="btn btn-danger btn-lg" href="https://steadyhq.com/en/junit" role="button">
-      <i class="fas fa-donate"></i>&nbsp;
+      <i class="fas fa-heart"></i>&nbsp;
       Support JUnit
     </a></li>
   </ul>
