Clarify downloading and signatures
Closes #2020.

--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@ title: JUnit 5
     {{ junit5-sponsoring | markdownify }}
   </div>
   <div class="col-md-4 col-sm-6">
-    <h2>Current Versions</h2>
-      <div>
-        <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.5.2">
-          <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.5.svg?color=25a162&label=JUnit%20Jupiter">
-        </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.5.2">
-          <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine/5.5.svg?colorB=25a162&label=JUnit%20Vintage">
-        </a><br />
-        <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.5.2">
-          <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons/1.5.svg?colorB=25a162&label=JUnit%20Platform">
-        </a>
-      </div>
+    <h2>Latest Release</h2>
+    <p>
+      <a href="https://search.maven.org/search?q=g:org.junit.jupiter%20AND%20v:5.5.2">
+        <img alt="JUnit Jupiter version" src="https://img.shields.io/maven-central/v/org.junit.jupiter/junit-jupiter/5.5.svg?color=25a162&label=Jupiter">
+      </a>
+      <a href="https://search.maven.org/search?q=g:org.junit.vintage%20AND%20v:5.5.2">
+        <img alt="JUnit Vintage version" src="https://img.shields.io/maven-central/v/org.junit.vintage/junit-vintage-engine/5.5.svg?colorB=25a162&label=Vintage">
+      </a>
+      <a href="https://search.maven.org/search?q=g:org.junit.platform%20AND%20v:1.5.2">
+        <img alt="JUnit Platform version" src="https://img.shields.io/maven-central/v/org.junit.platform/junit-platform-commons/1.5.svg?colorB=25a162&label=Platform">
+      </a>
+    </p>
+    <p>
+      JUnit artifacts are deployed to Maven Central and can be downloaded using the above links.
+      All files are signed using the keys listed in the <a href="https://github.com/junit-team/junit5/blob/master/KEYS">KEYS</a> file.
+    </p>
     <h2>Upcoming Events</h2>
     <div id="events">
       <script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/events.js"></script>
