--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ title: JUnit 5
     <h2>Follow Us</h2>
     <ul class="list-inline">
       <li><a rel="me" href="https://fosstodon.org/@junit"><i class="fa-brands fa-mastodon fa-lg"></i>&nbsp;Mastodon</a></li>
+      <li><a href="https://bsky.app/profile/junit-team.bsky.social"><i class="fa-brands fa-bluesky"></i>&nbsp;Bluesky</a></li>
       <li><a href="https://twitter.com/junitteam"><i class="fa-brands fa-twitter fa-lg"></i>&nbsp;Twitter</a></li>
     </ul>
   </div>
