Remove link to Twitter account

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ title: JUnit 5
     </div>
     <h2>Follow Us</h2>
     <ul class="list-inline">
-      <li><a rel="me" href="https://fosstodon.org/@junit"><i class="fa-brands fa-mastodon fa-lg"></i>&nbsp;Mastodon</a></li>
       <li><a href="https://bsky.app/profile/junit.org"><i class="fa-brands fa-bluesky fa-lg"></i>&nbsp;Bluesky</a></li>
-      <li><a href="https://twitter.com/junitteam"><i class="fa-brands fa-x-twitter fa-lg"></i></i>&nbsp;Twitter/X</a></li>
+      <li><a rel="me" href="https://fosstodon.org/@junit"><i class="fa-brands fa-mastodon fa-lg"></i>&nbsp;Mastodon</a>
+      </li>
     </ul>
   </div>
 </div>
