Link to new wiki page for adding a talk

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: JUnit
       <script defer type="text/javascript" src="{{ site.baseurl }}/assets/js/events.js"></script>
     </div>
     <div>
-      <a class="btn btn-default btn-xs" href="{{ site.current_repo_url }}/wiki/Adding-your-talk-to-the-JUnit-website" role="button">
+      <a class="btn btn-default btn-xs" href="https://github.com/junit-team/junit-team.github.io/wiki/Adding-your-talk-to-the-JUnit-website" role="button">
         <i class="fa-solid fa-plus"></i>&nbsp;
         Add your talk
       </a>
