Link to GitHub Discussions rather than StackOverflow

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ title: JUnit
       <i class="fa-brands fa-github fa-lg"></i>&nbsp;
       Code &amp; Issues
     </a></li>
-    <li><a class="btn btn-primary btn-lg" href="http://stackoverflow.com/questions/tagged/junit5" role="button">
-      <i class="fa-brands fa-stack-overflow fa-lg"></i>&nbsp;
+    <li><a class="btn btn-primary btn-lg" href="{{ site.current_repo_url }}/discussions/categories/q-a" role="button">
+      <i class="fa-regular fa-comments fa-lg"></i>&nbsp;
       Q&thinsp;&amp;&thinsp;A
     </a></li>
     <li><a class="btn btn-danger btn-lg" href="https://steadyhq.com/en/junit" role="button">
