--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: JUnit
   <h1>The programmer-friendly testing framework for Java and the JVM</h1>
   <ul class="list-inline">
     <li><a class="btn btn-primary btn-lg" href="https://docs.junit.org/current/user-guide" role="button">
-      <i class="fa-solid fa-book"></i>&nbsp;
+      <i class="fa-solid fa-book-open"></i>&nbsp;
       User Guide
     </a></li>
     <li><a class="btn btn-primary btn-lg" href="https://docs.junit.org/current/api" role="button">
