Point to GitHub Sponsors profile

--- a/sponsoring.html
+++ b/sponsoring.html
@@ -1,5 +1,5 @@
 ---
 layout: redirect
-target_url: https://steadyhq.com/junit
+target_url: https://github.com/sponsors/junit-team
 permalink: /sponsoring/
 ---
