Link to GitHub Sponsors profile

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ title: JUnit
       <i class="fa-regular fa-comments fa-lg"></i>&nbsp;
       Q&thinsp;&amp;&thinsp;A
     </a></li>
-    <li><a class="btn btn-danger btn-lg" href="https://steadyhq.com/en/junit" role="button">
+    <li><a class="btn btn-danger btn-lg" href="https://github.com/sponsors/junit-team" role="button">
       <i class="fa-solid fa-heart"></i>&nbsp;
-      Support JUnit
+      Sponsor
     </a></li>
   </ul>
 </div>
